--- a/templates/display.html
+++ b/templates/display.html
@@ -4,23 +4,51 @@
     <meta charset="UTF-8">
     <title>Sentiment Analysis Results</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/main.css') }}">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
     <header>
-        <h1>Sentiment Analysis Results for "{{ article_title }}"</h1>
+        <img src="{{ url_for('static', filename='logo.png') }}" alt="Logo" class="logo mb-3">
+        <h1>"{{ article_title }}"</h1>
     </header>
-    <main>
+    <main class="container my-4">
         <section id="results">
-            <h2>Analysis Results</h2>
-            <div class="table-container">
-                {% for table in tables %}
-                {{ table|safe }}
-                {% endfor %}
+            <h2 class="text-primary">Analysis Results</h2>
+            <div class="table-responsive">
+                <table class="table table-striped table-bordered">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th>User Name</th>
+                            <th>Comment</th>
+                            <th>Date</th>
+                            <th>Likes</th>
+                            <th>Sentiment</th>
+                            <th>Sentiment Score</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for row in comments %}
+                        <tr>
+                            <td>{{ row['User Name'] }}</td>
+                            <td>{{ row['Comment'] }}</td>
+                            <td>{{ row['Date'] }}</td>
+                            <td>{{ row['Likes'] }}</td>
+                            <td>{{ row['Sentiment'] }}</td>
+                            <td>{{ row['Sentiment Score'] }}</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
             </div>
-            <a class="btn" href="{{ url_for('statistics') }}">View Statistics</a>
-            <a class="btn" href="{{ url_for('index') }}">Analyze Another Comment</a>
-
+            <div class="d-flex justify-content-around my-4">
+                <a class="btn btn-primary" href="{{ url_for('statistics') }}">View Statistics</a>
+                <a class="btn btn-secondary" href="{{ url_for('home') }}">Analyze Another Comment</a>
+                <a class="btn btn-success" href="{{ url_for('download_csv') }}">Download CSV</a>
+            </div>
         </section>
     </main>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
